# Flavour

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tags
Bootstrap/: bootstrap-codelite-linux.sh  bootstrap-linux.sh  bootstrap-windows-vsstudio.bat
Flavour/: CMakeLists.txt  Flavour.def  Flavour.h  stdafx.h
Flavour/Core/: Application.cpp  Application.h  EntryPoint.h  FlavourUtils.h  Log.cpp  Log.h  PlatformExport.h
Flavour/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Flavour/src/: Flavour.def  Flavour.h  stdafx.h
Flavour/src/Core/: Application.cpp  EntryPoint.h  Log.cpp
Flavour/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SweetTaste/: CMakeLists.txt  SweetTaste.project  main.cpp
